--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </nav>
 
         <!-- HOME MAIN -->
-      <main class="home">
+      <main class="home-bgImg-container">
         <h2>Hi! My Name Is</h2>
         <h1 class="home__name">
           John <span class="home__name--last">Smith</span>
