--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/ctyle.css">
 
 </head>
 <body>
@@ -29,7 +29,7 @@
         </nav>
 
         <!-- HOME MAIN -->
-      <main class="home-bgImg-container">
+      <main class="home">
         <h2>Hi! My Name Is</h2>
         <h1 class="home__name">
           John <span class="home__name--last">Smith</span>
